###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################


bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "eigen", version = "3.4.0.bcr.1")

rules_foreign_cc_dependencies = use_repo_rule("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies(name="foreign_cc_deps")
